--- a/src/sbin/mount/mount.8
+++ b/src/sbin/mount/mount.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mount.8,v 1.66 2009/06/04 13:30:06 jmc Exp $
+.\"	$OpenBSD: mount.8,v 1.68 2011/04/05 18:51:25 thib Exp $
 .\"	$NetBSD: mount.8,v 1.11 1995/07/12 06:23:21 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1989, 1991, 1993
@@ -30,7 +30,7 @@
 .\"
 .\"     @(#)mount.8	8.7 (Berkeley) 3/27/94
 .\"
-.Dd $Mdocdate: September 28 2010 $
+.Dd $Mdocdate: April 5 2011 $
 .Dt MOUNT 8
 .Os
 .Sh NAME
@@ -388,7 +388,6 @@ with option
 .Xr mount_mfs 8 ,
 .Xr mount_msdos 8 ,
 .Xr mount_nfs 8 ,
-.Xr mount_nnpfs 8 ,
 .Xr mount_ntfs 8 ,
 .Xr mount_procfs 8 ,
 .Xr mount_udf 8 ,
