do not show mount_nnpfs in an example, since it is gone

--- a/src/usr.bin/man/man.1
+++ b/src/usr.bin/man/man.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: man.1,v 1.50 2011/10/09 02:20:39 schwarze Exp $
+.\"	$OpenBSD: man.1,v 1.51 2011/10/09 14:39:49 jmc Exp $
 .\"
 .\" Copyright (c) 1989, 1990, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -129,7 +129,6 @@ mount_ext2fs (8) \(en mount an ext2fs file system
 mount_ffs (8) \(en mount a Berkeley Fast File System
 mount_msdos (8) \(en mount an MS-DOS file system
 mount_nfs (8) \(en mount NFS file systems
-mount_nnpfs (8) \(en mount the nnpfs filesystem
 mount_ntfs (8) \(en mount an NTFS file system
 mount_procfs (8) \(en mount the process file system
 mount_udf (8) \(en mount a UDF filesystem
