--- a/src/share/man/man3/intro.3
+++ b/src/share/man/man3/intro.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: intro.3,v 1.47 2012/04/28 13:43:11 jmc Exp $
+.\"	$OpenBSD: intro.3,v 1.48 2012/08/31 08:22:15 pascal Exp $
 .\"	$NetBSD: intro.3,v 1.5 1995/05/10 22:46:24 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
@@ -30,7 +30,7 @@
 .\"
 .\"     @(#)intro.3	8.1 (Berkeley) 6/5/93
 .\"
-.Dd $Mdocdate: April 28 2012 $
+.Dd $Mdocdate: August 31 2012 $
 .Dt INTRO 3
 .Os
 .Sh NAME
@@ -547,8 +547,8 @@ flag, although on systems that support it, this will be the default and
 need not be specified.
 .Pp
 Shared libraries, as well as static libraries on architectures which are
-PIE
-.Pq position-independent executable
+position-independent executable
+.Pq PIE
 by default, contain position-independent code
 .Pq PIC .
 Normally, compilers produce relocatable code.
