--- a/src/sbin/scsi/scsi.8
+++ b/src/sbin/scsi/scsi.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: scsi.8,v 1.31 2007/05/31 19:19:47 jmc Exp $
+.\"	$OpenBSD: scsi.8,v 1.32 2007/07/03 18:26:32 krw Exp $
 .\"	$FreeBSD: scsi.8,v 1.5 1995/05/05 20:41:58 dufault Exp $
 .\"
 .\" Written By Julian ELischer
@@ -295,6 +295,8 @@ amount of data phase output sent to the debugging file.
 This
 variable determines the editor to use for the mode editor.
 .El
+.Sh EXIT STATUS
+.Ex -std scsi
 .Sh FILES
 .Bl -tag -width /usr/share/misc/scsi_modes
 .It Pa /usr/share/misc/scsi_modes
