--- a/src/share/man/man4/man4.i386/glxpcib.4
+++ b/src/share/man/man4/man4.i386/glxpcib.4
@@ -1,8 +1,8 @@
-.\"     $OpenBSD: glxpcib.4,v 1.7 2007/11/17 11:38:50 mbalmer Exp $
+.\"     $OpenBSD: glxpcib.4,v 1.8 2012/09/06 06:51:37 jsg Exp $
 .\"
 .\" Michael Shalayeff, 2007. Public Domain.
 .\"
-.Dd $Mdocdate: November 17 2007 $
+.Dd $Mdocdate: September 6 2012 $
 .Dt GLXPCIB 4 i386
 .Os
 .Sh NAME
@@ -21,7 +21,7 @@ This device contains a number of components, including a PCI-ISA bridge.
 Besides the core functionality, the
 .Nm
 driver implements a 32-bit 3.5 MHz timecounter, a watchdog timer device,
-a GPIO device, and a SMBus interface.
+a GPIO device, and an SMBus interface.
 .Sh SEE ALSO
 .Xr gpio 4 ,
 .Xr iic 4 ,
