--- a/src/share/man/man4/man4.loongson/glxpcib.4
+++ b/src/share/man/man4/man4.loongson/glxpcib.4
@@ -1,8 +1,8 @@
-.\"     $OpenBSD: glxpcib.4,v 1.1 2010/02/09 19:08:39 miod Exp $
+.\"     $OpenBSD: glxpcib.4,v 1.2 2012/09/06 06:51:37 jsg Exp $
 .\"
 .\" Michael Shalayeff, 2007. Public Domain.
 .\"
-.Dd $Mdocdate: February 9 2010 $
+.Dd $Mdocdate: September 6 2012 $
 .Dt GLXPCIB 4 loongson
 .Os
 .Sh NAME
@@ -22,7 +22,7 @@ This device contains a number of components, including a PCI-ISA bridge.
 Besides the core functionality, the
 .Nm
 .\" driver implements a 32-bit 3.5 MHz timecounter, a watchdog timer device,
-.\" a GPIO device, and a SMBus interface.
+.\" a GPIO device, and an SMBus interface.
 driver implements a 32-bit 3.5 MHz timecounter.
 .Sh SEE ALSO
 .\" .Xr gpio 4 ,
