--- a/src/share/man/man8/man8.macppc/MAKEDEV.8
+++ b/src/share/man/man8/man8.macppc/MAKEDEV.8
@@ -207,6 +207,9 @@ Hardware crypto access driver, see
 .It Ar diskmap
 Disk mapper, see
 .Xr diskmap 4 .
+.It Ar drm*
+Direct Rendering Manager, see
+.Xr drm 4 .
 .It Ar fd
 fd/* nodes, see
 .Xr fd 4 .
