--- a/src/share/man/man4/uftdi.4
+++ b/src/share/man/man4/uftdi.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: uftdi.4,v 1.26 2009/04/22 18:55:17 deraadt Exp $
+.\" $OpenBSD: uftdi.4,v 1.27 2009/11/07 05:18:09 deraadt Exp $
 .\" $NetBSD: uftdi.4,v 1.3 2001/01/13 20:53:22 nathanw Exp $
 .\"
 .\" Copyright (c) 2000 The NetBSD Foundation, Inc.
@@ -28,7 +28,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: April 22 2009 $
+.Dd $Mdocdate: November 7 2009 $
 .Dt UFTDI 4
 .Os
 .Sh NAME
@@ -41,7 +41,7 @@
 The
 .Nm
 driver provides support for various serial adapters based on the FTDI
-FT8U100AX, FT232BM, FT2232C, FT8U232AM, and FT8U245AM chips.
+FT8U100AX, FT232BM, FT2232C, FT2232H, FT8U232AM, and FT8U245AM chips.
 .Pp
 The device is accessed through the
 .Xr ucom 4
