--- a/src/lib/libpthread/man/pthread_sigmask.3
+++ b/src/lib/libpthread/man/pthread_sigmask.3
@@ -1,16 +1,15 @@
-.\" $OpenBSD: pthread_sigmask.3,v 1.7 2003/05/18 13:06:33 jmc Exp $
+.\" $OpenBSD: pthread_sigmask.3,v 1.8 2007/05/31 19:19:37 jmc Exp $
 .\"
 .\"
 .\"  David Leonard, 1999. Public Domain.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt PTHREAD_SIGMASK 3
 .Os
 .Sh NAME
 .Nm pthread_sigmask
 .Nd examine and/or change a thread's signal mask
 .Sh SYNOPSIS
-.Fd #include <pthread.h>
 .Fd #include <signal.h>
 .Ft int
 .Fn pthread_sigmask "int how" "const sigset_t *set" "sigset_t *oset"
