--- a/src/share/man/man4/uvideo.4
+++ b/src/share/man/man4/uvideo.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: uvideo.4,v 1.33 2011/06/09 14:21:12 deraadt Exp $
+.\" $OpenBSD: uvideo.4,v 1.34 2012/08/15 19:17:02 jmc Exp $
 .\"
 .\" Copyright (c) 2008 Ian Darwin.  All rights reserved.
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: June 9 2011 $
+.Dd $Mdocdate: August 15 2012 $
 .Dt UVIDEO 4
 .Os
 .Sh NAME
@@ -122,10 +122,8 @@ a device gets attached:
 .It Pa /etc/firmware/uvideo_r5u87x_05ca-1841
 .El
 .Pp
-A prepackaged version of the firmware, designed to be used with
-.Xr pkg_add 1 ,
-can be found at
-.Lk http://firmware.openbsd.org/firmware/uvideo-firmware-1.1.tgz
+A prepackaged version of the firmware can be installed using
+.Xr fw_update 1 .
 .Sh SEE ALSO
 .Xr intro 4 ,
 .Xr usb 4 ,
