--- a/src/share/man/man4/lge.4
+++ b/src/share/man/man4/lge.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: lge.4,v 1.21 2008/04/20 05:51:16 brad Exp $
+.\" $OpenBSD: lge.4,v 1.22 2012/08/18 08:44:25 jmc Exp $
 .\" Copyright (c) 2001 Wind River Systems
 .\" Copyright (c) 1997, 1998, 1999, 2000, 2001
 .\"	Bill Paul <william.paul@windriver.com>. All rights reserved.
@@ -32,7 +32,7 @@
 .\"
 .\" $FreeBSD: src/share/man/man4/lge.4,v 1.3 2001/07/06 08:34:13 ru Exp $
 .\"
-.Dd $Mdocdate: April 20 2008 $
+.Dd $Mdocdate: August 18 2012 $
 .Dt LGE 4
 .Os
 .Sh NAME
@@ -69,8 +69,6 @@ via the interface MTU setting.
 Selecting an MTU larger than 1500 bytes with the
 .Xr ifconfig 8
 utility configures the adapter to receive and transmit Jumbo frames.
-Using Jumbo frames can greatly improve performance for certain tasks,
-such as file transfers and data streaming.
 .Pp
 The
 .Nm
