--- a/src/share/man/man4/msk.4
+++ b/src/share/man/man4/msk.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: msk.4,v 1.10 2008/09/07 06:55:34 jmc Exp $
+.\"	$OpenBSD: msk.4,v 1.11 2009/03/22 22:08:34 kettenis Exp $
 .\"
 .\" Copyright (c) 1997, 1998, 1999
 .\"	Bill Paul <wpaul@ctr.columbia.edu>. All rights reserved.
@@ -32,7 +32,7 @@
 .\"
 .\" $FreeBSD: src/share/man/man4/man4.i386/sk.4,v 1.3 1999/08/28 00:20:29 peter Exp $
 .\"
-.Dd $Mdocdate: September 7 2008 $
+.Dd $Mdocdate: March 22 2009 $
 .Dt MSK 4
 .Os
 .Sh NAME
@@ -93,8 +93,6 @@ Support for Jumbo frames is provided via the interface MTU setting.
 Selecting an MTU larger than 1500 bytes with the
 .Xr ifconfig 8
 utility configures the adapter to transmit Jumbo frames.
-Using Jumbo frames can greatly improve performance for certain tasks,
-such as file transfers and data streaming.
 .Pp
 The
 .Nm
