--- a/src/share/man/man4/udl.4
+++ b/src/share/man/man4/udl.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: udl.4,v 1.18 2011/03/16 22:09:20 naddy Exp $
+.\" $OpenBSD: udl.4,v 1.19 2011/03/16 23:36:38 schwarze Exp $
 .\"
 .\" Copyright (c) 2009 Marcus Glocker <mglocker@openbsd.org>
 .\"
@@ -41,6 +41,7 @@ The following devices should work:
 .It IOGEAR USB 2.0 External DVI (GUC2020)
 .It Koenig CMP-USBVGA10 and CMP-USBVGA11
 .It Lenovo 45K5296 USB to DVI
+.It Lenovo ThinkVision LT1421
 .It Lilliput UM-70
 .It Nanovision MiMo UM-710 and UM-740
 .It Rextron VCUD60 USB to DVI
