--- a/src/share/man/man4/options.4
+++ b/src/share/man/man4/options.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: options.4,v 1.226 2012/04/06 15:42:56 jsing Exp $
+.\"	$OpenBSD: options.4,v 1.227 2012/08/23 14:36:43 jmc Exp $
 .\"	$NetBSD: options.4,v 1.21 1997/06/25 03:13:00 thorpej Exp $
 .\"
 .\" Copyright (c) 1998 Theo de Raadt
@@ -34,7 +34,7 @@
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
 .\"
-.Dd $Mdocdate: April 6 2012 $
+.Dd $Mdocdate: August 23 2012 $
 .Dt OPTIONS 4
 .Os
 .Sh NAME
@@ -536,7 +536,10 @@ See
 .Xr sysctl 3
 for details.
 .It Cd option PIPEX
-Includes PIPEX in-kernel acceleration for PPPoE, L2TP or PPTP.
+Includes pipex in-kernel acceleration for PPPoE, L2TP or PPTP.
+See
+.Xr pipex 4
+for details.
 .It Cd option PPP_BSDCOMP
 Enables BSD compressor for PPP connections.
 .It Cd option PPP_DEFLATE
