--- a/src/share/man/man4/usb.4
+++ b/src/share/man/man4/usb.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: usb.4,v 1.132 2012/08/15 19:17:02 jmc Exp $
+.\"	$OpenBSD: usb.4,v 1.133 2012/09/19 16:33:05 jsg Exp $
 .\"	$NetBSD: usb.4,v 1.15 1999/07/29 14:20:32 augustss Exp $
 .\"
 .\" Copyright (c) 1999 The NetBSD Foundation, Inc.
@@ -28,7 +28,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: August 15 2012 $
+.Dd $Mdocdate: September 19 2012 $
 .Dt USB 4
 .Os
 .Sh NAME
@@ -255,6 +255,12 @@ keyboards that follow the boot protocol
 .It Xr ums 4
 .Tn USB
 mouse devices
+.It Xr uoaklux 4
+Toradex OAK USB illuminance sensor
+.It Xr uoakrh 4
+Toradex OAK USB temperature and relative humidity sensor
+.It Xr uoakv 4
+Toradex OAK USB +/-10V 8channel ADC interface
 .It Xr uthum 4
 TEMPer USB temperature and humidity sensor
 .It Xr utrh 4
