--- a/src/sbin/dhclient/dhclient.conf.5
+++ b/src/sbin/dhclient/dhclient.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dhclient.conf.5,v 1.21 2011/04/09 19:53:00 krw Exp $
+.\"	$OpenBSD: dhclient.conf.5,v 1.22 2012/08/22 00:14:42 tedu Exp $
 .\"
 .\" Copyright (c) 1997 The Internet Software Consortium.
 .\" All rights reserved.
@@ -36,7 +36,7 @@
 .\" see ``http://www.isc.org/isc''.  To learn more about Vixie
 .\" Enterprises, see ``http://www.vix.com''.
 .\"
-.Dd $Mdocdate: April 9 2011 $
+.Dd $Mdocdate: August 22 2012 $
 .Dt DHCLIENT.CONF 5
 .Os
 .Sh NAME
@@ -480,8 +480,21 @@ file \- the defaults are usually fine.
 .Xr dhclient 8 ,
 .Xr dhclient-script 8 ,
 .Xr dhcpd 8
+.Sh STANDARDS
+.Rs
+.%A R. Droms
+.%D March 1997
+.%R RFC 2131
+.%T Dynamic Host Configuration Protocol
+.Re
 .Pp
-RFC 2132, RFC 2131.
+.Rs
+.%A S. Alexander
+.%A R. Droms
+.%D March 1997
+.%R RFC 2132
+.%T DHCP Options and BOOTP Vendor Extensions
+.Re
 .Sh AUTHORS
 .An -nosplit
 .Xr dhclient 8
