--- a/src/usr.sbin/dvmrpd/dvmrpd.8
+++ b/src/usr.sbin/dvmrpd/dvmrpd.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dvmrpd.8,v 1.6 2009/10/22 12:35:53 sobrado Exp $
+.\"	$OpenBSD: dvmrpd.8,v 1.7 2009/10/22 15:02:12 sobrado Exp $
 .\"
 .\" Copyright (c) 2004, 2005, 2006 Esben Norby <norby@openbsd.org>
 .\"
@@ -108,10 +108,11 @@ socket used for communication with
 .Sh SEE ALSO
 .Xr dvmrpd.conf 5 ,
 .Xr dvmrpctl 8
+.Sh STANDARDS
 .Rs
-.%R "draft-ietf-idmr-dvmrp-v3-11"
-.%T "DVMRP Version 3"
 .%D August 2000
+.%R draft-ietf-idmr-dvmrp-v3-11
+.%T DVMRP Version 3
 .Re
 .Sh HISTORY
 The
