--- a/src/usr.sbin/iscsid/iscsid.8
+++ b/src/usr.sbin/iscsid/iscsid.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: iscsid.8,v 1.5 2012/06/26 21:10:18 claudio Exp $
+.\"	$OpenBSD: iscsid.8,v 1.6 2012/06/26 22:26:14 jmc Exp $
 .\"
 .\" Copyright (c) 2010 David Gwynne <dlg@openbsd.org>
 .\"
@@ -72,15 +72,27 @@ socket used for communication with
 .Xr vscsi 4 ,
 .Xr iscsi.conf 5 ,
 .Xr iscsictl 8
+.Sh STANDARDS
 .Rs
+.%A J. Satran
+.%A K. Meth
+.%A C. Sapuntzakis
+.%A M. Chadalapaka
+.%A E. Zeidner
+.%D April 2004
 .%R RFC 3720
-.%T "Internet Small Computer Systems Interface (iSCSI)"
-.%D April 2004
+.%T Internet Small Computer Systems Interface (iSCSI)
 .Re
+.Pp
 .Rs
-.%R RFC 3721
-.%T "Internet Small Computer Systems Interface (iSCSI) Naming and Discovery"
+.%A M. Bakke
+.%A J. Hafner
+.%A J. Hufferd
+.%A K. Voruganti
+.%A M. Krueger
 .%D April 2004
+.%R RFC 3721
+.%T Internet Small Computer Systems Interface (iSCSI) Naming and Discovery
 .Re
 .Sh HISTORY
 The
