--- a/src/share/man/man4/re.4
+++ b/src/share/man/man4/re.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: re.4,v 1.47 2011/03/13 21:32:29 jmc Exp $
+.\" $OpenBSD: re.4,v 1.48 2012/08/18 08:44:25 jmc Exp $
 .\" Copyright (c) 2003
 .\"	Bill Paul <wpaul@windriver.com>. All rights reserved.
 .\"
@@ -31,7 +31,7 @@
 .\"
 .\" $FreeBSD: /repoman/r/ncvs/src/share/man/man4/re.4,v 1.4 2004/03/04 06:42:46 sanpei Exp $
 .\"
-.Dd $Mdocdate: March 13 2011 $
+.Dd $Mdocdate: August 18 2012 $
 .Dt RE 4
 .Os
 .Sh NAME
@@ -62,6 +62,8 @@ Compaq Evo N1015v Integrated Ethernet (8139C+)
 Corega CG-LAPCIGT (8169S)
 .It
 D-Link DGE-528T (8169S)
+.It
+D-Link DGE-530T C1 (8169/8110SB)
 .It
 D-Link DGE-660TD (8169/8110SB)
 .It
