--- a/src/share/man/man4/pflow.4
+++ b/src/share/man/man4/pflow.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: pflow.4,v 1.11 2012/02/02 12:34:37 benno Exp $
+.\" $OpenBSD: pflow.4,v 1.12 2012/08/22 18:22:42 jmc Exp $
 .\"
 .\" Copyright (c) 2008 Henning Brauer <henning@openbsd.org>
 .\" Copyright (c) 2008 Joerg Goltermann <jg@osn.de>
@@ -15,7 +15,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: February 2 2012 $
+.Dd $Mdocdate: August 22 2012 $
 .Dt PFLOW 4
 .Os
 .Sh NAME
@@ -111,12 +111,14 @@ The protocol is set to IPFIX with the following command:
 .Xr pf.conf 5 ,
 .Xr ifconfig 8 ,
 .Xr tcpdump 8
+.Sh STANDARDS
 .Rs
 .%A B. Claise
 .%D October 2004
 .%R RFC 3954
 .%T Cisco Systems NetFlow Services Export Version 9
 .Re
+.Pp
 .Rs
 .%A B. Claise
 .%D January 2008
