--- a/src/share/man/man4/ppp.4
+++ b/src/share/man/man4/ppp.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ppp.4,v 1.11 2007/05/31 19:19:51 jmc Exp $
+.\"	$OpenBSD: ppp.4,v 1.12 2009/01/31 19:37:12 sobrado Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -29,7 +29,7 @@
 .\"
 .\"     From:	@(#)lo.4	8.1 (Berkeley) 6/5/93
 .\"
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate: January 31 2009 $
 .Dt PPP 4
 .Os
 .Sh NAME
@@ -74,10 +74,12 @@ family; the packet was dropped.
 .Xr netstart 8 ,
 .Xr pppd 8 ,
 .Xr pppstats 8
+.Sh STANDARDS
 .Rs
-.%R RFC 1661
+.%A W. Simpson
 .%D July 1994
-.%T "The Point-to-Point Protocol (PPP)"
+.%R RFC 1661
+.%T The Point-to-Point Protocol (PPP)
 .Re
 .Sh HISTORY
 The
