--- a/src/share/man/man4/sppp.4
+++ b/src/share/man/man4/sppp.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: sppp.4,v 1.20 2010/04/05 06:20:43 jmc Exp $
+.\" $OpenBSD: sppp.4,v 1.21 2012/08/24 14:41:43 jmc Exp $
 .\"
 .\" Copyright (c) 1997 Joerg Wunsch
 .\"
@@ -25,7 +25,7 @@
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
 .\"
-.Dd $Mdocdate: April 5 2010 $
+.Dd $Mdocdate: August 24 2012 $
 .Dt SPPP 4
 .Os
 .Sh NAME
@@ -206,12 +206,14 @@ take place.
 .Xr pppoe 4 ,
 .Xr ifconfig 8 ,
 .Xr ppp 8
+.Sh STANDARDS
 .Rs
 .%A G. McGregor
 .%D May 1992
 .%R RFC 1332
 .%T The PPP Internet Protocol Control Protocol (IPCP)
 .Re
+.Pp
 .Rs
 .%A B. Lloyd
 .%A W. Simpson
@@ -219,18 +221,21 @@ take place.
 .%R RFC 1334
 .%T PPP Authentication Protocols
 .Re
+.Pp
 .Rs
 .%A W. Simpson
 .%D July 1994
 .%R RFC 1661
 .%T The Point-to-Point Protocol (PPP)
 .Re
+.Pp
 .Rs
 .%A W. Simpson
 .%D August 1996
 .%R RFC 1994
 .%T PPP Challenge Handshake Authentication Protocol (CHAP)
 .Re
+.Pp
 .Rs
 .%A S. Varada
 .%A D. Haskins
