--- a/src/share/man/man7/mailaddr.7
+++ b/src/share/man/man7/mailaddr.7
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mailaddr.7,v 1.11 2008/06/15 21:17:27 jmc Exp $
+.\"	$OpenBSD: mailaddr.7,v 1.12 2012/08/18 16:25:20 jmc Exp $
 .\"	$NetBSD: mailaddr.7,v 1.3 1994/11/30 19:07:17 jtc Exp $
 .\"
 .\" Copyright (c) 1983, 1987, 1990, 1993
@@ -30,7 +30,7 @@
 .\"
 .\"     @(#)mailaddr.7	8.1 (Berkeley) 6/16/93
 .\"
-.Dd $Mdocdate: June 15 2008 $
+.Dd $Mdocdate: August 18 2012 $
 .Dt MAILADDR 7
 .Os
 .Sh NAME
@@ -161,6 +161,7 @@ respectively.
 .Sh SEE ALSO
 .Xr mail 1 ,
 .Xr sendmail 8
+.Sh STANDARDS
 .Rs
 .%A P. Resnick
 .%D 2008
