--- a/src/sys/arch/armish/stand/boot/boot.8
+++ b/src/sys/arch/armish/stand/boot/boot.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: boot.8,v 1.1 2008/05/28 21:36:11 miod Exp $
+.\"	$OpenBSD: boot.8,v 1.2 2012/08/15 19:02:01 jmc Exp $
 .\"
 .\" Copyright (c) 1997-2001 Michael Shalayeff
 .\" All rights reserved.
@@ -25,7 +25,7 @@
 .\" THE POSSIBILITY OF SUCH DAMAGE.
 .\"
 .\"
-.Dd $Mdocdate: May 28 2008 $
+.Dd $Mdocdate: August 15 2012 $
 .Dt BOOT 8 armish
 .Os
 .Sh NAME
@@ -277,12 +277,6 @@ option.
 .Xr boot_config 8 ,
 .Xr fdisk 8 ,
 .Xr reboot 8
-.Pp
-RFC 1950 describes the zlib library interface.
-.Pp
-The official home page for the version of zlib used in this
-operating system is at
-.Lk http://www.gzip.org/zlib/ .
 .Sh HISTORY
 This program was written by Michael Shalayeff for
 .Ox 2.1
