--- a/src/sbin/pfctl/pfctl.8
+++ b/src/sbin/pfctl/pfctl.8
@@ -1,4 +1,4 @@
-.\" $OpenBSD: pfctl.8,v 1.154 2011/04/23 10:14:59 sobrado Exp $
+.\" $OpenBSD: pfctl.8,v 1.155 2011/11/23 10:24:37 henning Exp $
 .\"
 .\" Copyright (c) 2001 Kjell Wooding.  All rights reserved.
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: April 23 2011 $
+.Dd $Mdocdate: November 23 2011 $
 .Dt PFCTL 8
 .Os
 .Sh NAME
@@ -305,7 +305,6 @@ To kill a state with ID 4823e84500000018 created from a backup
 firewall with hostid 00000002 use:
 .Pp
 .Dl # pfctl -k id -k 4823e84500000018/2
-.Pp
 .It Fl L Ar statefile
 Load pf states from the file specified by
 .Ar statefile .
