--- a/src/usr.sbin/tftp-proxy/tftp-proxy.8
+++ b/src/usr.sbin/tftp-proxy/tftp-proxy.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: tftp-proxy.8,v 1.7 2011/09/28 13:25:24 jmc Exp $
+.\"	$OpenBSD: tftp-proxy.8,v 1.1 2012/07/11 12:07:32 dlg Exp $
 .\"
 .\" Copyright (c) 2005 joshua stein <jcs@openbsd.org>
 .\"
@@ -120,7 +120,6 @@ pass out quick on $ext_if inet proto udp from $lan to port tftp \e
 .Xr pf 4 ,
 .Xr pf.conf 5 ,
 .Xr ftp-proxy 8 ,
-.Xr inetd 8 ,
 .Xr syslogd 8 ,
 .Xr tftpd 8
 .Sh CAVEATS
