--- a/src/share/man/man4/uoakrh.4
+++ b/src/share/man/man4/uoakrh.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: uoakrh.4,v 1.1 2012/09/20 15:06:43 yuo Exp $
+.\"	$OpenBSD: uoakrh.4,v 1.2 2012/09/20 16:39:26 jmc Exp $
 .\"
 .\" Copyright (c) 2012 Yojiro UO <yuo@nui.org>
 .\"
@@ -47,7 +47,7 @@ indicated in the description part of the sensor value.
 The
 .Nm
 deivce driver first appeared in
-.Ox 5.2 .
+.Ox 5.3 .
 .Sh AUTHORS
 .An -nosplit
 The
