--- a/src/share/man/man4/uoaklux.4
+++ b/src/share/man/man4/uoaklux.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: uoaklux.4,v 1.2 2012/09/20 16:39:26 jmc Exp $
+.\"	$OpenBSD: uoaklux.4,v 1.3 2012/10/08 09:08:04 jsg Exp $
 .\"
 .\" Copyright (c) 2012 Yojiro UO <yuo@nui.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: September 20 2012 $
+.Dd $Mdocdate: October 8 2012 $
 .Dt UOAKLUX 4
 .Os
 .Sh NAME
@@ -50,7 +50,7 @@ indicated in the description part of the sensor value.
 .Sh HISTORY
 The
 .Nm
-deivce driver first appered in
+device driver first appered in
 .Ox 5.3 .
 .Sh AUTHORS
 .An -nosplit
