--- a/src/usr.bin/mg/mg.1
+++ b/src/usr.bin/mg/mg.1
@@ -1,7 +1,7 @@
-.\"	$OpenBSD: mg.1,v 1.67 2012/06/21 17:55:10 lum Exp $
+.\"	$OpenBSD: mg.1,v 1.68 2012/07/11 19:56:13 sobrado Exp $
 .\" This file is in the public domain.
 .\"
-.Dd $Mdocdate: June 21 2012 $
+.Dd $Mdocdate: July 11 2012 $
 .Dt MG 1
 .Os
 .Sh NAME
@@ -752,6 +752,8 @@ is negative, it is that line from the bottom.
 .It redraw-display
 Refresh the display.
 Recomputes all window sizes in case something has changed.
+.It revert-buffer
+Revert the current buffer to the latest file on disk.
 .It save-buffer
 Save the contents of the current buffer if it has been changed,
 optionally creating a backup copy.
