--- a/src/sys/arch/amd64/stand/pxeboot/pxeboot.8
+++ b/src/sys/arch/amd64/stand/pxeboot/pxeboot.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pxeboot.8,v 1.10 2009/01/16 00:34:57 form Exp $
+.\"	$OpenBSD: pxeboot.8,v 1.11 2012/03/09 07:12:25 jmc Exp $
 .\" Copyright (c) 2004 Tom Cosgrove
 .\" Copyright (c) 2003 Matthias Drochner
 .\" Copyright (c) 1999 Doug White
@@ -25,7 +25,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: January 16 2009 $
+.Dd $Mdocdate: March 9 2012 $
 .Dt PXEBOOT 8 amd64
 .Os
 .Sh NAME
@@ -173,6 +173,7 @@ The same thing:
 .Xr diskless 8 ,
 .Xr httpd 8 ,
 .Xr tftpd 8
+.Sh STANDARDS
 .Rs
 .%T Preboot Execution Environment (PXE) Specification
 .%N Version 2.1
