--- a/src/share/man/man5/pf.conf.5
+++ b/src/share/man/man5/pf.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pf.conf.5,v 1.521 2012/09/20 09:43:49 camield Exp $
+.\"	$OpenBSD: pf.conf.5,v 1.522 2012/09/20 11:52:46 jmc Exp $
 .\"
 .\" Copyright (c) 2002, Daniel Hartmeier
 .\" All rights reserved.
@@ -1039,7 +1039,7 @@ option prevents
 from modifying the source port on TCP and UDP packets.
 .El
 .Pp
-When more than one redirection address is specified,
+When more than one redirection address or a table is specified,
 .Ar round-robin
 and
 .Ar least-states
