--- a/src/sbin/dhclient/dhclient.8
+++ b/src/sbin/dhclient/dhclient.8
@@ -1,4 +1,4 @@
-.\" $OpenBSD: dhclient.8,v 1.7 2010/10/08 15:43:45 sobrado Exp $
+.\" $OpenBSD: dhclient.8,v 1.8 2011/03/02 07:44:42 jmc Exp $
 .\"
 .\" Copyright (c) 1997 The Internet Software Consortium.
 .\" All rights reserved.
@@ -35,7 +35,7 @@
 .\" Enterprises.  To learn more about the Internet Software Consortium,
 .\" see ``http://www.isc.org/isc''.  To learn more about Vixie
 .\" Enterprises, see ``http://www.vix.com''.
-.Dd $Mdocdate: October 8 2010 $
+.Dd $Mdocdate: March 2 2011 $
 .Dt DHCLIENT 8
 .Os
 .Sh NAME
@@ -166,7 +166,6 @@ database of acquired leases
 .Xr bpf 4 ,
 .Xr dhclient.conf 5 ,
 .Xr dhclient.leases 5 ,
-.Xr dhclient-script 8 ,
 .Xr dhcp 8 ,
 .Xr dhcpd 8 ,
 .Xr dhcrelay 8
