--- a/src/share/man/man5/port-modules.5
+++ b/src/share/man/man5/port-modules.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: port-modules.5,v 1.143 2012/08/19 05:50:31 jmc Exp $
+.\"	$OpenBSD: port-modules.5,v 1.144 2012/09/19 08:15:55 jasper Exp $
 .\"
 .\" Copyright (c) 2008 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: August 19 2012 $
+.Dd $Mdocdate: September 19 2012 $
 .Dt PORT-MODULES 5
 .Os
 .Sh NAME
@@ -660,7 +660,8 @@ Appends
 .Ev MODLUA_LIBDIR ,
 .Ev MODLUA_DATADIR ,
 .Ev MODLUA_DEP ,
-.Ev MODLUA_DEP_VERSION
+.Ev MODLUA_DEP_VERSION ,
+.Ev MODLUA_BIN
 to
 .Ev SUBST_VARS .
 .Ev MODLUA_DEFAULT_VERSION
