Correct capitalization of KVM/VirtualBox.

--- a/src/share/man/man4/vio.4
+++ b/src/share/man/man4/vio.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: vio.4,v 1.1 2012/09/19 19:24:33 sf Exp $
+.\"     $OpenBSD: vio.4,v 1.2 2012/09/19 21:12:30 jmc Exp $
 .\"
 .\" Copyright (c) 2012 Stefan Fritsch <sf@sfritsch.de>
 .\"
@@ -28,7 +28,7 @@ The
 driver provides support for the
 .Xr virtio 4
 network interface provided by some
-hypervisors like kvm or virtualbox.
+hypervisors like KVM or VirtualBox.
 .Sh SEE ALSO
 .Xr intro 4 ,
 .Xr virtio 4
