--- a/src/share/man/man4/vioblk.4
+++ b/src/share/man/man4/vioblk.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: vioblk.4,v 1.1 2012/09/19 19:24:33 sf Exp $
+.\"     $OpenBSD: vioblk.4,v 1.2 2012/09/19 21:12:30 jmc Exp $
 .\"
 .\" Copyright (c) 2012 Stefan Fritsch <sf@sfritsch.de>
 .\"
@@ -29,7 +29,7 @@ The
 driver provides a virtual disk using a
 .Xr virtio 4
 block device provided by a
-hypervisor like kvm or virtualbox.
+hypervisor like KVM or VirtualBox.
 .Sh SEE ALSO
 .Xr intro 4 ,
 .Xr scsi 4 ,
