--- a/src/share/man/man4/virtio.4
+++ b/src/share/man/man4/virtio.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: virtio.4,v 1.1 2012/09/19 19:24:33 sf Exp $
+.\"     $OpenBSD: virtio.4,v 1.2 2012/09/19 21:12:30 jmc Exp $
 .\"
 .\" Copyright (c) 2012 Stefan Fritsch <sf@sfritsch.de>
 .\"
@@ -30,7 +30,7 @@ network adapter
 .Xr vio 4
 or the virtio block device
 .Xr vioblk 4 .
-Such devices are provided by some hypervisors like kvm or virtualbox.
+Such devices are provided by some hypervisors like KVM or VirtualBox.
 .Sh SEE ALSO
 .Xr intro 4 ,
 .Xr vio 4 ,
