--- a/src/usr.bin/mg/mg.1
+++ b/src/usr.bin/mg/mg.1
@@ -1,7 +1,7 @@
-.\"	$OpenBSD: mg.1,v 1.69 2012/10/12 21:13:47 jasper Exp $
+.\"	$OpenBSD: mg.1,v 1.70 2012/10/22 08:31:42 florian Exp $
 .\" This file is in the public domain.
 .\"
-.Dd $Mdocdate: October 12 2012 $
+.Dd $Mdocdate: October 22 2012 $
 .Dt MG 1
 .Os
 .Sh NAME
@@ -650,7 +650,7 @@ are left there and not moved to the
 .Pa ~/.mg.d
 directory.
 .It line-number-mode
-Toggle whether line and column numbers are displayed in the modeline.
+Toggle whether the line number is displayed in the modeline.
 .It list-buffers
 Display the list of available buffers.
 .It load
