--- a/src/usr.bin/getopt/getopt.1
+++ b/src/usr.bin/getopt/getopt.1
@@ -1,9 +1,9 @@
-.\"	$OpenBSD: getopt.1,v 1.15 2009/04/12 23:13:36 okan Exp $
+.\"	$OpenBSD: getopt.1,v 1.16 2010/10/28 18:33:28 jmc Exp $
 .\"
 .\" This material, written by Henry Spencer, was released by him
 .\" into the public domain and is thus not subject to any copyright.
 .\"
-.Dd $Mdocdate: April 12 2009 $
+.Dd $Mdocdate: October 28 2010 $
 .Dt GETOPT 1
 .Os
 .Sh NAME
@@ -65,7 +65,7 @@ then
 	exit 2
 fi
 set -- $args
-while [ $# -ge 0 ]
+while [ $# -ne 0 ]
 do
 	case "$1"
 	in
