--- a/src/usr.sbin/smtpd/makemap.8
+++ b/src/usr.sbin/smtpd/makemap.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: makemap.8,v 1.17 2012/05/13 13:57:24 jmc Exp $
+.\"	$OpenBSD: makemap.8,v 1.18 2012/11/18 22:08:56 rpe Exp $
 .\"
 .\" Copyright (c) 2009 Jacek Masiulaniec <jacekm@openbsd.org>
 .\" Copyright (c) 2008-2009 Gilles Chechade <gilles@openbsd.org>
@@ -15,7 +15,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: May 13 2012 $
+.Dd $Mdocdate: November 18 2012 $
 .Dt MAKEMAP 8
 .Os
 .Sh NAME
@@ -74,7 +74,6 @@ There is no mapped value \(en a map of this type will only allow for
 the lookup of keys.
 This format can be used for building primary domain maps.
 .El
-.Pp
 .El
 .Sh PRIMARY DOMAINS
 Primary domains can be kept in maps.
