Remplace aucat server by a new sndiod daemon aimed to be simpler smaller and faster than aucat. It's a drop in replacement with the following exceptions that don't affect the default setup:   - The sample rate and the encoding are a per-device parameters     thus -r and -e options must precede the corresponding -f option   - MIDI thru boxes are dynamically created and no -M option     is required anymore, so -M was removed.   - MIDI ports are exposed with a new ``midi/N'' name, rather     than abusing MIDI thru boxes. with help from armani@, ok deraadt@

--- a/src/lib/libsndio/sndio.7
+++ b/src/lib/libsndio/sndio.7
@@ -1,4 +1,4 @@
-.\" $OpenBSD: sndio.7,v 1.9 2011/12/09 14:38:09 ratchov Exp $
+.\" $OpenBSD$
 .\"
 .\" Copyright (c) 2007 Alexandre Ratchov <alex@caoua.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: December 9 2011 $
+.Dd $Mdocdate$
 .Dt SNDIO 7
 .Os
 .Sh NAME
@@ -92,6 +92,9 @@ Audio device exposed by
 .Xr sndiod 1 .
 .It Pa midithru
 MIDI thru box created with
+.Xr sndiod 1 .
+.It Pa midi
+MIDI port exposed by
 .Xr sndiod 1 .
 .It Pa default
 Any audio device or MIDI port.
