--- a/src/sbin/iked/iked.8
+++ b/src/sbin/iked/iked.8
@@ -1,4 +1,4 @@
-.\" $OpenBSD: iked.8,v 1.10 2012/10/22 13:27:23 jmc Exp $
+.\" $OpenBSD: iked.8,v 1.11 2012/11/29 15:08:08 reyk Exp $
 .\" $vantronix: iked.8,v 1.5 2010/06/02 14:38:08 reyk Exp $
 .\"
 .\" Copyright (c) 2010 Reyk Floeter <reyk@openbsd.org>
@@ -15,7 +15,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: October 22 2012 $
+.Dd $Mdocdate: November 29 2012 $
 .Dt IKED 8
 .Os
 .Sh NAME
@@ -62,7 +62,7 @@ The options are as follows:
 .It Fl 6
 Disable automatic blocking of IPv6 traffic.
 By default,
-.Xr iked 8
+.Nm
 blocks any IPv6 traffic unless a flow for this address family has been
 negotiated.
 This option is used to prevent VPN traffic leakages on dual stack hosts.
