--- a/src/usr.sbin/ldomctl/ldomctl.8
+++ b/src/usr.sbin/ldomctl/ldomctl.8
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: ldomctl.8,v 1.1 2012/11/04 18:14:09 kettenis Exp $
+.\"     $OpenBSD: ldomctl.8,v 1.2 2012/11/04 21:37:37 jmc Exp $
 .\"
 .\" Copyright (c) 2012 Mark Kettenis <kettenis@openbsd.org>
 .\"
@@ -52,5 +52,5 @@ program first appeared in
 .Sh AUTHORS
 The
 .Nm
-daemon was written by
+program was written by
 .An Mark Kettenis Aq kettenis@openbsd.org .
