simpler text; ok ratchov

--- a/src/usr.bin/sndiod/sndiod.1
+++ b/src/usr.bin/sndiod/sndiod.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sndiod.1,v 1.1 2012/11/23 07:03:28 ratchov Exp $
+.\"	$OpenBSD: sndiod.1,v 1.2 2012/11/23 07:44:33 jmc Exp $
 .\"
 .\" Copyright (c) 2006-2012 Alexandre Ratchov <alex@caoua.org>
 .\"
@@ -101,9 +101,7 @@ The user selects the configuration a given program will use
 by selecting the sub-device the program uses.
 .Pp
 .Nm
-exposes MIDI thru boxes (aka a
-.Dq hubs
-for MIDI messages),
+exposes MIDI thru boxes (hubs),
 allowing programs to send MIDI messages to each other
 or to hardware MIDI ports in a uniform way.
 .Pp
