--- a/src/share/man/man8/man8.macppc/MAKEDEV.8
+++ b/src/share/man/man8/man8.macppc/MAKEDEV.8
@@ -3,7 +3,7 @@
 .\" THIS FILE AUTOMATICALLY GENERATED.  DO NOT EDIT.
 .\" generated from:
 .\"
-.\"	OpenBSD: etc.macppc/MAKEDEV.md,v 1.50 2012/08/23 06:15:28 deraadt Exp 
+.\"	OpenBSD: etc.macppc/MAKEDEV.md,v 1.51 2012/09/08 17:18:22 mpi Exp 
 .\"	OpenBSD: MAKEDEV.common,v 1.60 2012/08/23 06:15:28 deraadt Exp 
 .\"	OpenBSD: MAKEDEV.man,v 1.7 2009/03/18 17:34:25 sobrado Exp 
 .\"	OpenBSD: MAKEDEV.mansub,v 1.2 2004/02/20 19:13:01 miod Exp 
@@ -207,6 +207,9 @@ Hardware crypto access driver, see
 .It Ar diskmap
 Disk mapper, see
 .Xr diskmap 4 .
+.It Ar agp*
+AGP bridge, see
+.Xr agp 4 .
 .It Ar drm*
 Direct Rendering Manager, see
 .Xr drm 4 .
