--- a/src/usr.bin/mg/mg.1
+++ b/src/usr.bin/mg/mg.1
@@ -1,7 +1,7 @@
-.\"	$OpenBSD: mg.1,v 1.71 2012/11/13 22:03:44 florian Exp $
+.\"	$OpenBSD: mg.1,v 1.72 2012/11/27 19:46:46 jasper Exp $
 .\" This file is in the public domain.
 .\"
-.Dd $Mdocdate: November 13 2012 $
+.Dd $Mdocdate: November 27 2012 $
 .Dt MG 1
 .Os
 .Sh NAME
@@ -414,6 +414,8 @@ upper case, and subsequent letters to lower case.
 .It cd
 Change the global working directory.
 See also global-wd-mode.
+.It column-number-mode
+Toggle whether the column number is displayed in the modeline.
 .It copy-region-as-kill
 Copy all of the characters in the region to the kill buffer,
 clearing the mark afterwards.
