--- a/src/share/man/man7/hier.7
+++ b/src/share/man/man7/hier.7
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hier.7,v 1.103 2012/08/23 14:40:24 jmc Exp $
+.\"	$OpenBSD: hier.7,v 1.104 2012/09/25 07:32:27 jmc Exp $
 .\"	$NetBSD: hier.7,v 1.7 1994/11/30 19:07:10 jtc Exp $
 .\"
 .\" Copyright (c) 1990, 1993
@@ -30,7 +30,7 @@
 .\"
 .\"	@(#)hier.7	8.1 (Berkeley) 6/5/93
 .\"
-.Dd $Mdocdate: August 23 2012 $
+.Dd $Mdocdate: September 25 2012 $
 .Dt HIER 7
 .Os
 .Sh NAME
@@ -122,6 +122,9 @@ configuration files (including
 .Xr aliases 5 ) .
 .It mtree/
 .Xr mtree 8
+configuration files.
+.It nginx/
+.Xr nginx 8
 configuration files.
 .It npppd/
 .Xr npppd 8
