--- a/src/usr.bin/pkg-config/pkg-config.1
+++ b/src/usr.bin/pkg-config/pkg-config.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pkg-config.1,v 1.27 2012/07/08 08:53:37 ajacoutot Exp $
+.\"	$OpenBSD: pkg-config.1,v 1.28 2012/07/08 17:32:58 espie Exp $
 .\"
 .\"	Copyright (c) 2006 Chris Kuethe <ckuethe@openbsd.org>
 .\"
@@ -84,6 +84,9 @@ compile against the package.
 Enable internal development and debugging messages.
 .It Cm --errors-to-stdout
 Direct error messages to stdout rather than stderr.
+.It Cm --exact-version Ar version
+Exit with error if the specified packages's version does not equal the
+specified version.
 .It Cm --exists
 Return true if all the specified packages are installed.
 This is the default operation.
@@ -102,6 +105,9 @@ Return linker flags, other than the library and path flags, required to
 compile against the package.
 .It Cm --list-all
 List all installed packages and exit.
+.It Cm --max-version Ar version
+Exit with error if the specified package's version is greater than
+the specified version.
 .It Cm --modversion
 Fetch package version.
 If no package is given,
