--- a/src/usr.bin/mg/mg.1
+++ b/src/usr.bin/mg/mg.1
@@ -1,7 +1,7 @@
-.\"	$OpenBSD: mg.1,v 1.73 2012/12/04 10:54:20 florian Exp $
+.\"	$OpenBSD: mg.1,v 1.74 2012/12/27 18:51:52 florian Exp $
 .\" This file is in the public domain.
 .\"
-.Dd $Mdocdate: December 4 2012 $
+.Dd $Mdocdate: December 27 2012 $
 .Dt MG 1
 .Os
 .Sh NAME
@@ -968,3 +968,5 @@ In order to use 8-bit characters (such as German umlauts), the Meta key
 needs to be disabled via the
 .Dq meta-key-mode
 command.
+.Pp
+Multi-byte character sets, such as UTF-8, are not supported.
