remove unused .Pp;

--- a/src/share/man/man4/tty.4
+++ b/src/share/man/man4/tty.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: tty.4,v 1.36 2010/04/13 20:38:26 mk Exp $
+.\"	$OpenBSD: tty.4,v 1.37 2010/07/31 20:26:21 jmc Exp $
 .\"	$NetBSD: tty.4,v 1.4 1996/03/19 04:26:01 paulus Exp $
 .\"
 .\" Copyright (c) 1991, 1992, 1993
@@ -30,7 +30,7 @@
 .\"
 .\"     @(#)tty.4	8.3 (Berkeley) 4/19/94
 .\"
-.Dd $Mdocdate: April 13 2010 $
+.Dd $Mdocdate: July 31 2010 $
 .Dt TTY 4
 .Os
 .Sh NAME
@@ -219,7 +219,6 @@ NMEA 0183 line discipline.
 .It MSTSDISC
 Meinberg Standard Time String line discipline.
 .El
-.Pp
 .It Dv TIOCGETD Fa int *ldisc
 Return the current line discipline in the integer pointed to by
 .Fa ldisc .
