--- a/src/share/man/man4/umsm.4
+++ b/src/share/man/man4/umsm.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: umsm.4,v 1.85 2012/11/17 11:05:38 schwarze Exp $
+.\"	$OpenBSD: umsm.4,v 1.86 2012/11/17 13:39:24 jmc Exp $
 .\"
 .\" Copyright (c) 2006 Jonathan Gray <jsg@openbsd.org>
 .\"
@@ -66,6 +66,7 @@ driver:
 .It Li "Huawei Mobile E220" Ta "USB"
 .It Li "Huawei Mobile E303" Ta "USB"
 .It Li "Huawei Mobile E352" Ta "USB"
+.It Li "Huawei Mobile E353" Ta "USB"
 .It Li "Huawei Mobile E392" Ta "USB"
 .It Li "Huawei Mobile E510" Ta "USB"
 .It Li "Huawei Mobile E1550" Ta "USB"
