tidy up the vio docs; ok sf

--- a/src/share/man/man4/vio.4
+++ b/src/share/man/man4/vio.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: vio.4,v 1.4 2012/11/02 10:12:21 brad Exp $
+.\"     $OpenBSD: vio.4,v 1.5 2012/11/30 08:07:24 sf Exp $
 .\"
 .\" Copyright (c) 2012 Stefan Fritsch <sf@sfritsch.de>
 .\"
@@ -14,12 +14,12 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: November 2 2012 $
+.Dd $Mdocdate: November 30 2012 $
 .Dt VIO 4
 .Os
 .Sh NAME
 .Nm vio
-.Nd virtual network device
+.Nd VirtIO network device
 .Sh SYNOPSIS
 .Cd "vio* at virtio?"
 .Sh DESCRIPTION
