--- a/src/share/man/man4/vioblk.4
+++ b/src/share/man/man4/vioblk.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: vioblk.4,v 1.3 2012/11/01 03:48:12 brad Exp $
+.\"     $OpenBSD: vioblk.4,v 1.4 2012/11/02 10:12:21 brad Exp $
 .\"
 .\" Copyright (c) 2012 Stefan Fritsch <sf@sfritsch.de>
 .\"
@@ -14,12 +14,12 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: November 1 2012 $
+.Dd $Mdocdate: November 2 2012 $
 .Dt VIOBLK 4
 .Os
 .Sh NAME
 .Nm vioblk
-.Nd virtual disk
+.Nd VirtIO disk
 .Sh SYNOPSIS
 .Cd "vioblk* at virtio?"
 .Cd "scsibus* at vioblk?"
