typo: icpp/ipcp; from Renaud Allard

--- a/src/usr.sbin/npppd/npppd/npppd.conf.5
+++ b/src/usr.sbin/npppd/npppd/npppd.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: npppd.conf.5,v 1.7 2013/02/08 11:06:26 yasuoka Exp $
+.\"	$OpenBSD: npppd.conf.5,v 1.8 2013/02/08 12:15:33 yasuoka Exp $
 .\"
 .\" Copyright (c) 2012 YASUOKA Masahiko <yasuoka@openbsd.org>
 .\"
@@ -456,7 +456,7 @@ The default is
 .El
 .Sh IPCP
 The
-.Ic icpp
+.Ic ipcp
 setting is described below:
 .Pp
 .Ic ipcp Ar name Op Ar option ...
