- Parse colon separated paths into NULL terminated arrays of string pointers to prepare for adding rpath ORIGIN support. okay matthew@ millert@

--- a/src/libexec/ld.so/ldconfig/ldconfig.8
+++ b/src/libexec/ld.so/ldconfig/ldconfig.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ldconfig.8,v 1.24 2006/08/12 20:11:53 stevesk Exp $
+.\"	$OpenBSD: ldconfig.8,v 1.25 2007/05/31 19:19:39 jmc Exp $
 .\"
 .\" Copyright (c) 1993,1995 Paul Kranenburg
 .\" All rights reserved.
