there is no lower controllable lower bound for nkmempages

--- a/src/share/man/man4/options.4
+++ b/src/share/man/man4/options.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: options.4,v 1.229 2013/03/21 22:04:47 deraadt Exp $
+.\"	$OpenBSD: options.4,v 1.230 2013/03/21 23:06:46 jmc Exp $
 .\"	$NetBSD: options.4,v 1.21 1997/06/25 03:13:00 thorpej Exp $
 .\"
 .\" Copyright (c) 1998 Theo de Raadt
@@ -623,7 +623,7 @@ variable
 .Em vm.nkmempages .
 See
 .Pa /usr/include/machine/param.h
-for the default upper and lower bounds.
+for the default upper bound.
 The related option
 .Sq NKMEMPAGES_MAX
 allows the bounds to be overridden in the kernel configuration file
