mention that the tga driver is specifically for the DECchip 21030 ok miod@

--- a/src/share/man/man4/pci.4
+++ b/src/share/man/man4/pci.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pci.4,v 1.311 2013/03/17 11:03:08 jmc Exp $
+.\"	$OpenBSD: pci.4,v 1.312 2013/03/17 18:37:57 brad Exp $
 .\"	$NetBSD: pci.4,v 1.29 2000/04/01 00:32:23 tsarna Exp $
 .\"
 .\" Copyright (c) 2000 Theo de Raadt.  All rights reserved.
@@ -346,7 +346,7 @@ PCI ``universal'' communications card driver
 .It Xr sti 4
 HP Standard Text Interface
 .It Xr tga 4
-TGA graphics driver
+DECchip 21030 (TGA) graphics driver
 .It Xr vga 4
 VGA graphics cards
 .El
