- (mdoc.7) fix Xr to self - double word fix

--- a/src/share/man/man7/roff.7
+++ b/src/share/man/man7/roff.7
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: roff.7,v 1.18 2011/12/11 00:38:08 schwarze Exp $
+.\"	$OpenBSD: roff.7,v 1.19 2012/07/29 12:57:45 schwarze Exp $
 .\"
 .\" Copyright (c) 2010, 2011 Kristaps Dzonsons <kristaps@bsd.lv>
 .\" Copyright (c) 2010, 2011 Ingo Schwarze <schwarze@openbsd.org>
@@ -15,7 +15,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: December 11 2011 $
+.Dd $Mdocdate: July 29 2012 $
 .Dt ROFF 7
 .Os
 .Sh NAME
@@ -934,7 +934,7 @@ See
 .Xr tbl 7
 for a description of the tbl language.
 .Sh COMPATIBILITY
-This section documents compatibility between mandoc and other other
+This section documents compatibility between mandoc and other
 .Nm
 implementations, at this time limited to GNU troff
 .Pq Qq groff .
