.Xr mpe and ldpd for interested parties. ok deraadt

--- a/src/share/man/man4/mpe.4
+++ b/src/share/man/man4/mpe.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mpe.4,v 1.5 2010/04/11 15:27:53 jmc Exp $
+.\"	$OpenBSD: mpe.4,v 1.6 2010/04/11 15:29:07 jmc Exp $
 .\"
 .\" Copyright (C) 2008 Pierre-Yves Ritschard <pyr@openbsd.org>
 .\"
@@ -55,6 +55,7 @@ tagged with.
 .Xr sysctl 3 ,
 .Xr hostname.if 5 ,
 .Xr ifconfig 8 ,
+.Xr ldpd 8 ,
 .Xr netstart 8
 .\"
 .Sh HISTORY
