--- a/src/usr.sbin/ldpd/ldpd.8
+++ b/src/usr.sbin/ldpd/ldpd.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ldpd.8,v 1.6 2012/08/29 20:15:19 jmc Exp $
+.\"	$OpenBSD: ldpd.8,v 1.7 2012/09/26 16:19:45 jmc Exp $
 .\"
 .\" Copyright (c) 2009 Michele Marchetto <michele@openbsd.org>
 .\" Copyright (c) 2004, 2005, 2006 Esben Norby <norby@openbsd.org>
@@ -15,7 +15,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: August 29 2012 $
+.Dd $Mdocdate: September 26 2012 $
 .Dt LDPD 8
 .Os
 .Sh NAME
@@ -75,6 +75,7 @@ socket used for communication with
 .Xr ldpctl 8 .
 .El
 .Sh SEE ALSO
+.Xr mpe 4 ,
 .Xr ldpd.conf 5 ,
 .Xr ldpctl 8 ,
 .Xr rc.conf 8
