--- a/src/usr.bin/bgplg/bgplgsh.8
+++ b/src/usr.bin/bgplg/bgplgsh.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: bgplgsh.8,v 1.7 2013/01/17 21:29:14 jmc Exp $
+.\"	$OpenBSD: bgplgsh.8,v 1.8 2013/06/01 18:47:55 reyk Exp $
 .\"
 .\" Copyright (c) 2005, 2006 Reyk Floeter <reyk@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: January 17 2013 $
+.Dd $Mdocdate: June 1 2013 $
 .Dt BGPLGSH 8
 .Os
 .Sh NAME
@@ -74,11 +74,11 @@ to have
 .Xr bgpd 8
 open a second, restricted, control socket:
 .Pp
-.Dl socket \&"/var/www/logs/bgpd.rsock\&" restricted
+.Dl socket \&"/var/www/run/bgpd.rsock\&" restricted
 .El
 .Sh FILES
-.Bl -tag -width "/var/www/conf/bgpd.rsockXX" -compact
-.It Pa /var/www/logs/bgpd.rsock
+.Bl -tag -width "/var/www/run/bgpd.rsockXX" -compact
+.It Pa /var/www/run/bgpd.rsock
 Position of the second, restricted, control socket of
 .Xr bgpd 8 .
 .El
