reduce .Nd to one line and kill .Tn while here

--- a/src/usr.sbin/dev_mkdb/dev_mkdb.8
+++ b/src/usr.sbin/dev_mkdb/dev_mkdb.8
@@ -28,14 +28,12 @@
 .\"	from: @(#)dev_mkdb.8	8.1 (Berkeley) 6/6/93
 .\"	$Id$
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt DEV_MKDB 8
 .Os
 .Sh NAME
 .Nm dev_mkdb
-.Nd create
-.Pa /dev
-database
+.Nd create /dev database
 .Sh SYNOPSIS
 .Nm dev_mkdb
 .Sh DESCRIPTION
