Remove needless comma.

--- a/src/lib/libc/sys/pledge.2
+++ b/src/lib/libc/sys/pledge.2
@@ -1,4 +1,4 @@
-.\" $OpenBSD: pledge.2,v 1.11 2015/11/03 01:51:33 tedu Exp $
+.\" $OpenBSD: pledge.2,v 1.12 2015/11/03 16:31:54 deraadt Exp $
 .\"
 .\" Copyright (c) 2015 Nicholas Marriott <nicm@openbsd.org>
 .\"
@@ -448,7 +448,7 @@ Allows enough
 .Xr sysctl 3
 interfaces to allow inspection of the system's virtual memory by
 programs like
-.Xr top 1 ,
+.Xr top 1
 and
 .Xr vmstat 8 .
 .It Va "id"
