The compile-time secure mode has gone, from Michael Reed.

--- a/src/usr.bin/less/less.1
+++ b/src/usr.bin/less/less.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: less.1,v 1.48 2015/11/08 08:53:49 nicm Exp $
+.\"	$OpenBSD: less.1,v 1.49 2015/11/08 09:56:38 jmc Exp $
 .\"
 .\" Copyright (C) 1984-2012  Mark Nudelman
 .\"
@@ -1756,8 +1756,6 @@ Metacharacters in filenames, such as "*".
 .It " "
 Filename completion (TAB, ^L).
 .El
-.Pp
-Less can also be compiled to be permanently in "secure" mode.
 .Sh COMPATIBILITY WITH MORE
 If the environment variable
 .Ev LESS_IS_MORE
