update NAME; ok nicm schwarze

--- a/src/lib/libmenu/menu_attributes.3
+++ b/src/lib/libmenu/menu_attributes.3
@@ -1,5 +1,5 @@
 '\" t
-.\" $OpenBSD$
+.\" $OpenBSD: menu_attributes.3,v 1.2 2010/01/12 23:22:08 nicm Exp $
 .\"
 .\"***************************************************************************
 .\" Copyright (c) 1998-2006,2008 Free Software Foundation, Inc.              *
@@ -32,7 +32,11 @@
 .\" $Id$
 .TH menu_attributes 3 ""
 .SH NAME
-\fBmenu_attributes\fR - color and attribute control for menus
+\fBset_menu_fore\fR, \fBmenu_fore\fR,
+\fBset_menu_back\fR, \fBmenu_back\fR,
+\fBset_menu_grey\fR, \fBmenu_grey\fR,
+\fBset_menu_pad\fR, \fBmenu_pad\fR
+- color and attribute control for menus
 .SH SYNOPSIS
 \fB#include <menu.h>\fR
 .br
