--- a/src/lib/libmenu/menu_cursor.3
+++ b/src/lib/libmenu/menu_cursor.3
@@ -1,5 +1,5 @@
 '\" t
-.\" $OpenBSD$
+.\" $OpenBSD: menu_cursor.3,v 1.7 2010/01/12 23:22:08 nicm Exp $
 .\"
 .\"***************************************************************************
 .\" Copyright (c) 1998,2006 Free Software Foundation, Inc.                   *
@@ -32,7 +32,7 @@
 .\" $Id$
 .TH menu_cursor 3 ""
 .SH NAME
-\fBmenu_cursor\fR - position a menu's cursor
+\fBpos_menu_cursor\fR - position a menu's cursor
 .SH SYNOPSIS
 \fB#include <menu.h>\fR
 .br
