--- a/src/lib/libmenu/menu_new.3
+++ b/src/lib/libmenu/menu_new.3
@@ -1,5 +1,5 @@
 '\" t
-.\" $OpenBSD$
+.\" $OpenBSD: menu_new.3,v 1.7 2010/01/12 23:22:08 nicm Exp $
 .\"
 .\"***************************************************************************
 .\" Copyright (c) 1998,2006 Free Software Foundation, Inc.                   *
@@ -32,7 +32,7 @@
 .\" $Id$
 .TH menu_new 3 ""
 .SH NAME
-\fBmenu_new\fR - create and destroy menus
+\fBnew_menu\fR, \fBfree_menu\fR - create and destroy menus
 .SH SYNOPSIS
 \fB#include <menu.h>\fR
 .br
