--- a/src/lib/libmenu/menu_post.3
+++ b/src/lib/libmenu/menu_post.3
@@ -1,5 +1,5 @@
 '\" t
-.\" $OpenBSD$
+.\" $OpenBSD: menu_post.3,v 1.7 2010/01/12 23:22:08 nicm Exp $
 .\"
 .\"***************************************************************************
 .\" Copyright (c) 1998,2006 Free Software Foundation, Inc.                   *
@@ -32,7 +32,8 @@
 .\" $Id$
 .TH menu_post 3 ""
 .SH NAME
-\fBmenu_post\fR - write or erase menus from associated subwindows
+\fBpost_menu\fR, \fBunpost_menu\fR
+- write or erase menus from associated subwindows
 .SH SYNOPSIS
 \fB#include <menu.h>\fR
 .br
