--- a/src/lib/libmenu/menu_requestname.3
+++ b/src/lib/libmenu/menu_requestname.3
@@ -1,5 +1,5 @@
 '\" t
-.\" $OpenBSD$
+.\" $OpenBSD: menu_requestname.3,v 1.6 2010/01/12 23:22:08 nicm Exp $
 .\"
 .\"***************************************************************************
 .\" Copyright (c) 1998,2006 Free Software Foundation, Inc.                   *
@@ -32,7 +32,8 @@
 .\" $Id$
 .TH menu_requestname 3 ""
 .SH NAME
-\fBmenu_requestname\fR - handle printable menu request names
+\fBmenu_request_name\fR, \fBmenu_request_by_name\fR
+- handle printable menu request names
 .SH SYNOPSIS
 \fB#include <menu.h>\fR
 .br
