--- a/src/lib/libmenu/menu_spacing.3
+++ b/src/lib/libmenu/menu_spacing.3
@@ -1,5 +1,5 @@
 '\" t
-.\" $OpenBSD$
+.\" $OpenBSD: menu_spacing.3,v 1.6 2010/01/12 23:22:08 nicm Exp $
 .\"
 .\"***************************************************************************
 .\" Copyright (c) 1998-2001,2004 Free Software Foundation, Inc.              *
@@ -32,7 +32,8 @@
 .\" $Id$
 .TH menu_spacing 3 ""
 .SH NAME
-\fBmenu_spacing\fR - Control spacing between menu items.
+\fBset_menu_spacing\fR, \fBmenu_spacing\fR
+- Control spacing between menu items.
 .SH SYNOPSIS
 \fB#include <menu.h>\fR
 .br
