--- a/src/lib/libmenu/menu_userptr.3
+++ b/src/lib/libmenu/menu_userptr.3
@@ -1,5 +1,5 @@
 '\" t
-.\" $OpenBSD$
+.\" $OpenBSD: menu_userptr.3,v 1.7 2010/01/12 23:22:08 nicm Exp $
 .\"
 .\"***************************************************************************
 .\" Copyright (c) 1998,2006 Free Software Foundation, Inc.                   *
@@ -32,7 +32,8 @@
 .\" $Id$
 .TH menu_userptr 3 ""
 .SH NAME
-\fBmenu_userptr\fR - associate application data with a menu item
+\fBset_menu_userptr\fR, \fBmenu_userptr\fR
+- associate application data with a menu item
 .SH SYNOPSIS
 \fB#include <menu.h>\fR
 .br
