--- a/src/lib/libc/sys/revoke.2
+++ b/src/lib/libc/sys/revoke.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: revoke.2,v 1.12 2015/05/31 23:54:25 schwarze Exp $
+.\"	$OpenBSD: revoke.2,v 1.13 2015/11/16 18:25:18 deraadt Exp $
 .\"	$NetBSD: revoke.2,v 1.3 1995/10/12 15:41:11 jtc Exp $
 .\"
 .\" Copyright (c) 1993
@@ -33,7 +33,7 @@
 .\"
 .\"     @(#)revoke.2	8.1 (Berkeley) 6/4/93
 .\"
-.Dd $Mdocdate: May 31 2015 $
+.Dd $Mdocdate: November 16 2015 $
 .Dt REVOKE 2
 .Os
 .Sh NAME
@@ -68,7 +68,7 @@ preventing any access by a previous user of the terminal.
 The
 .Xr pty 4
 subsystem has this as an implicit operation, but hardwired
-. Xr tty 4
+.Xr tty 4
 require the operation.
 .Sh RETURN VALUES
 .Rv -std
