do not uppercase Nd;

--- a/src/share/man/man9/ifq_enq.9
+++ b/src/share/man/man9/ifq_enq.9
@@ -1,4 +1,4 @@
-.\"     $OpenBSD$
+.\"     $OpenBSD: ifq_enq.9,v 1.1 2015/11/20 03:35:22 dlg Exp $
 .\"
 .\"  Copyright (c) 2015 David Gwynne <dlg@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: November 12 2015 $
+.Dd $Mdocdate: November 20 2015 $
 .Dt IFQ_ENQ 9
 .Os
 .Sh NAME
@@ -26,7 +26,7 @@
 .Nm ifq_purge ,
 .Nm ifq_len ,
 .Nm ifq_empty
-.Nd Interface send queue API
+.Nd interface send queue API
 .Sh SYNOPSIS
 .In net/if_var.h
 .Ft int
